/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/inventory/component/pb/gen";

package ukama.inventory.component.v1;

service ComponentService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc GetByCompany(GetByCompanyRequest) returns (GetByCompanyResponse);
    rpc GetByUser(GetByUserRequest) returns (GetByUserResponse);

    rpc SyncComponents(SyncComponentsRequest) returns (SyncComponentsResponse);
}

message GetRequest {
    string id = 1 ;
}

message GetResponse {
    Component component = 1;
}

message GetByCompanyRequest {
    string company = 1;
    ComponentCategory category = 2;
}

message GetByCompanyResponse {
    repeated Component components = 1;
}

message GetByUserRequest {
    string userId = 1 [json_name = "user_id"];
    ComponentCategory category = 2;
}

message GetByUserResponse {
    repeated Component components = 1;
}

message SyncComponentsRequest {}

message SyncComponentsResponse {}

message Component {
    string id = 1;
    string company = 2;
    string inventory = 3 [json_name = "inventory_id"];
    ComponentCategory category = 4;
    string type = 5;
    string userId = 6 [json_name = "user_id"];
    string description = 7;
    string datasheetURL = 8 [json_name = "datasheet_url"];
    string imagesURL = 9 [json_name = "images_url"];
    string partNumber = 10 [json_name = "part_number"];
    string manufacturer = 11;
    string managed = 12;
    uint32 warranty = 13;
    string specification = 14;
}

enum ComponentCategory {
    ACCESS = 0;
    BACKHAUL = 1;
    POWER = 2;
    SWITCH = 3;
}
